upgpkg: listen1-desktop 2.3.1-1
upstream release

Update listen1-desktop

--- a/nvchecker.ini
+++ b/nvchecker.ini
@@ -33,3 +33,7 @@ use_latest_release=true
 [kwin-scripts-window-colors]
 github=psifidotos/kwinscript-window-colors
 use_latest_release=true
+
+[listen1-desktop]
+github=listen1/listen1_desktop
+use_latest_release=true
