--- a/postman/PKGBUILD
+++ b/postman/PKGBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Bruce Zhang
 pkgname=postman
-pkgver=7.3.5
+pkgver=7.3.6
 pkgrel=1
 pkgdesc='Build, test, and document your APIs faster'
 arch=('x86_64')
 url='https://www.getpostman.com/downloads/'
-license=('custom:Postman UELA')
+license=('custom:Postman EULA')
 depends=('electron4')
 provides=('postman')
 conflicts=('postman-bin')
@@ -21,7 +21,7 @@ source=(
 sha256sums=('bbc2f4a8db8fa55d854f7fe4a41339dd02522b7e77879fc7b6796819bceb9a33'
             'cf4b62b0fccdec77a24abc350a03082a521fc1bc533feb1781e83a4a170424b2'
             '25045b9c1748b29a359017d7cd0052d62798d9217900c1db94edf259ed1592ac')
-sha256sums_x86_64=('9dc1e4954eee9a51f18816606db12fa2872f1c993f3f15abda89c3fbaaf1b478')
+sha256sums_x86_64=('d8678943028f9ba13bcf0ea2f759151432657b21f4d91ee1a4a05f7e6ea03ffd')
 
 package() {
   cd "$srcdir/Postman/app/resources/app"
