--- a/nvchecker.ini
+++ b/nvchecker.ini
@@ -33,3 +33,19 @@ use_latest_release=true
 [listen1-desktop]
 github=listen1/listen1_desktop
 use_latest_release=true
+
+[desktop-naotu]
+github=NaoTu/DesktopNaotu
+use_latest_release=true
+
+[electron-wechat]
+github=eNkru/electron-wechat
+use_latest_release=true
+
+[electron-xiami]
+github=eNkru/electron-xiami
+use_latest_release=true
+
+[majsoul-plus]
+github=MajsoulPlus/majsoul-plus
+use_latest_release=true
