Initial upload: dingtalk-bin 1.0.0-1
upgpkg: sddm-theme-sugar-candy-git r30.9cbdbc2-1

update packages

--- a/sddm-theme-sugar-candy-git/PKGBUILD
+++ b/sddm-theme-sugar-candy-git/PKGBUILD
@@ -10,6 +10,7 @@ depends=('sddm>=0.18' 'qt5-graphicaleffects' 'qt5-quickcontrols2' 'qt5-svg')
 makedepends=('git')
 provides=("sddm-theme-sugar-candy")
 conflicts=("sddm-theme-sugar-candy")
+backup=('usr/share/sddm/themes/Sugar-Candy/theme.conf')
 source=('sugar-candy::git+https://www.opencode.net/marianarlt/sddm-sugar-candy.git')
 sha256sums=('SKIP')
 
