--- a/sonic/PKGBUILD
+++ b/sonic/PKGBUILD
@@ -1,15 +1,19 @@
 # Maintainer: Bruce Zhang
 pkgname=sonic
 pkgver=1.2.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Fast, lightweight & schema-less search backend. An alternative to Elasticsearch that runs on a few MBs of RAM"
 arch=('i686' 'x86_64')
 url="https://github.com/valeriansaliou/sonic"
 license=('MPL2')
 depends=()
 makedepends=('clang' 'llvm' 'rustup')
-source=("$pkgname-$pkgver.src.tar.gz::https://github.com/valeriansaliou/sonic/archive/v$pkgver.tar.gz")
-sha256sums=('d9fa4e43f809b2fdc2799ae00db7e4745087ac6dad520a9be2b40a687e3db4ca')
+source=(
+	"$pkgname-$pkgver.src.tar.gz::https://github.com/valeriansaliou/sonic/archive/v$pkgver.tar.gz"
+	'sonic.sysusers'
+)
+sha256sums=('d9fa4e43f809b2fdc2799ae00db7e4745087ac6dad520a9be2b40a687e3db4ca'
+            '1bec735cc0560927eb8ca43494bc0f1b2ec34296357fe1a861ce10ed3828a704')
 
 build() {
 	cd "$srcdir/$pkgname-$pkgver"
@@ -34,4 +38,5 @@ package() {
 	install -Dm644 examples/config/systemd.service "$pkgdir/usr/lib/systemd/system/sonic.service"
 
 	install -Dm644 config.cfg "$pkgdir/etc/sonic.cfg"
+	install -Dm644 "$srcdir/sonic.sysusers" "$pkgdir/usr/lib/sysusers.d/sonic.conf"
 }
