--- a/nvchecker.ini
+++ b/nvchecker.ini
@@ -3,14 +3,17 @@ oldver=old.txt
 newver=new.txt
 
 [devhub]
+prefix=v
 github=devhubapp/devhub
 use_latest_release=true
 
 [dingtalk]
+prefix=v
 github=nashaofu/dingtalk
 use_latest_release=true
 
 [electron-ssr]
+prefix=v
 github=shadowsocksrr/electron-ssr
 use_latest_release=true
 
@@ -19,33 +22,46 @@ pypi=feeluown
 use_pre_release=true
 
 [gridea]
+prefix=v
 github=getgridea/gridea
 use_latest_release=true
 
 [imewlconverter-bin]
+prefix=V
 github=studyzy/imewlconverter
 use_latest_release=true
 
 [kwin-scripts-window-colors]
+prefix=v
 github=psifidotos/kwinscript-window-colors
 use_latest_release=true
 
 [listen1-desktop]
+prefix=v
 github=listen1/listen1_desktop
 use_latest_release=true
 
 [desktop-naotu]
+prefix=v
 github=NaoTu/DesktopNaotu
 use_latest_release=true
 
 [electron-wechat]
+prefix=v
 github=eNkru/electron-wechat
 use_latest_release=true
 
 [electron-xiami]
+prefix=v
 github=eNkru/electron-xiami
 use_latest_release=true
 
 [majsoul-plus]
+prefix=v
+from_pattern=-beta\.
+to_pattern=b
 github=MajsoulPlus/majsoul-plus
-use_latest_release=true
+use_max_tag=true
+
+[postman]
+cmd=curl -I https://dl.pstmn.io/download/latest/linux64 | grep -o '[0-9]*\.[0-9]*\.[0-9]'
