--- a/nvchecker.ini
+++ b/nvchecker.ini
@@ -58,8 +58,8 @@ use_latest_release=true
 
 [majsoul-plus]
 prefix=v
-from_pattern=-beta\.
-to_pattern=b
+from_pattern=-(a(?=lpha)|b(?=eta))\.
+to_pattern=\1
 github=MajsoulPlus/majsoul-plus
 use_max_tag=true
 
