--- a/nvchecker.ini
+++ b/nvchecker.ini
@@ -48,7 +48,7 @@ use_latest_release=true
 
 [electron-wechat]
 prefix=v
-github=eNkru/electron-wechat
+github=eNkru/freechat
 use_latest_release=true
 
 [electron-xiami]
