--- a/nvchecker.ini
+++ b/nvchecker.ini
@@ -65,3 +65,8 @@ use_max_tag=true
 
 [postman]
 cmd=curl -I https://dl.pstmn.io/download/latest/linux64 | grep -o '[0-9]*\.[0-9]*\.[0-9]'
+
+[petal]
+prefix=v
+github=ilime/Petal
+use_latest_release=true
