--- a/nvchecker.ini
+++ b/nvchecker.ini
@@ -66,3 +66,7 @@ cmd=curl -I https://dl.pstmn.io/download/latest/linux64 | grep -o '[0-9]*\.[0-9]
 prefix=v
 github=ilime/Petal
 use_latest_release=true
+
+[feeluown]
+pypi=feeluown
+use_pre_release=true
