--- a/firecamp/PKGBUILD
+++ b/firecamp/PKGBUILD
@@ -1,36 +1,36 @@
 # Maintainer: Bruce Zhang
 pkgname=firecamp
-pkgver=1.2.5
+pkgver=1.4.4
 pkgrel=1
 pkgdesc="firecamp, A campsite for developers."
 arch=('x86_64')
 url="https://firecamp.app/"
 license=('unknown')
-depends=('electron')
+depends=('electron8')
 makedepends=('p7zip' 'asar')
 provides=('firecamp')
 options=('!strip')
 source=(
     "$pkgname-$pkgver.orig.appimage::https://firecamp.ams3.digitaloceanspaces.com/versions/linux/Firecamp-$pkgver.AppImage"
-    'runner.patch'
+	"path.patch"
 )
-sha256sums=('13bb9878a787afd0ba3391c0160dab7d9af5124d7691924090e9142451c15ac3'
-            'f22a12c6b3ee55161ac9e8debadba48263fad338c13b6700d06261c2346426dd')
+sha256sums=('240c94d2b5242e39ffb27287abc9c9ba7456a204036db9dd46f97f5d47b277cd' 'SKIP')
 
 prepare() {
 	cd "$srcdir"
 	7z x "$pkgname-$pkgver.orig.appimage" -ofirecamp
 	cd firecamp/resources
 	asar e app.asar app
-	patch -u app/electron.js -i "$srcdir/runner.patch"
+	patch -s -p0 < "$srcdir/path.patch"
 	echo "#!/usr/bin/env sh
 export ELECTRON_IS_DEV=0
-exec electron /usr/share/firecamp/app \$@ --no-sandbox" > "$srcdir/firecamp.sh"
+exec electron8 /usr/share/firecamp/app \$@ --no-sandbox" > "$srcdir/firecamp.sh"
 }
 
 package() {
 	cd "$srcdir/firecamp/resources"
 	mkdir -p "$pkgdir/usr/share/firecamp"
 	cp -r app "$pkgdir/usr/share/firecamp/app"
+	cp -r "$srcdir/firecamp/resources/node_modules/google-protobuf" "$pkgdir/usr/share/firecamp/app/node_modules"
 	install -Dm755 "$srcdir/firecamp.sh" "$pkgdir/usr/bin/firecamp"
 }
