--- a/i5sing/PKGBUILD
+++ b/i5sing/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Bruce Zhang
 pkgname=i5sing
 _name=i5SING
-pkgver=0.2.1
+pkgver=0.3.0
 pkgrel=1
 pkgdesc='中国原创音乐基地5sing桌面客户端'
 arch=('x86_64' 'i686')
@@ -9,12 +9,22 @@ url='https://github.com/i5sing/i5SING'
 license=('MIT')
 provides=('i5sing')
 conflicts=('i5sing-git' 'i5sing-bin')
-depends=('electron4')
-makedepends=('yarn')
+depends=('electron9')
+makedepends=('nvm' 'yarn')
 source=("$pkgname-$pkgver.src.tar.gz::https://github.com/i5sing/i5SING/archive/v$pkgver.tar.gz")
-sha256sums=('03f29f3cedec73dbd579f718e451cdd4c0a8f298599318225d5ce49c982febbf')
+sha256sums=('3a5a1fcd37e6783ae81dab1fc3f7a965685692c7eb9b69e8a6926c58ae59a32e')
 
 prepare() {
+    source /usr/share/nvm/init-nvm.sh
+    v10=$(nvm ls v10.23.0 | wc -l)
+
+    # Switch node version to 10
+    if test "$v10" != "1";
+    then
+        nvm install v10.23.0
+    fi
+    nvm use v10.23.0
+
 	cd "$srcdir/$_name-$pkgver"
     yarn
 }
@@ -22,6 +32,13 @@ prepare() {
 build() {
     cd "$srcdir/$_name-$pkgver"
     yarn run package
+
+    # Switch node version to system
+    if test "$v10" != "1";
+    then
+        nvm uninstall v10.23.0
+    fi
+    nvm deactivate
 }
 
 package() {
@@ -32,7 +49,7 @@ package() {
 
     # Install start script
     echo "#!/usr/bin/env sh
-exec electron4 /usr/share/i5sing/app.asar
+exec electron9 /usr/share/i5sing/app.asar
     " > "$srcdir/i5sing.sh"
     install -Dm755 "$srcdir/i5sing.sh" "$pkgdir/usr/bin/i5sing"
 
