--- a/netease-cloud-music/PKGBUILD
+++ b/netease-cloud-music/PKGBUILD
@@ -5,12 +5,12 @@ _pkgdate=20190428
 pkgrel=1
 pkgdesc="Netease Cloud Music, converted from .deb package"
 arch=("x86_64")
-url="http://music.163.com/"
+url="https://music.163.com/"
 license=('custom')
 depends=()
 source=(
-	"http://d1.music.126.net/dmusic/netease-cloud-music_${pkgver}_amd64_ubuntu_${_pkgdate}.deb"
-	"http://music.163.com/html/web2/service.html"
+	"https://d1.music.126.net/dmusic/netease-cloud-music_${pkgver}_amd64_ubuntu_${_pkgdate}.deb"
+	"https://music.163.com/html/web2/service.html"
 )
 md5sums=('1f47c7dc3d9ce46da8099e539ee8a74d'
          'ee09cacb054f6a346bf935737df3f33d')
